Adds header, main and footer with buttons in main.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 </head>
 <script src="javascript.js"></script>
 <body>
-    
+    <div class="header"></div>
+    <div class="main">
+        <div class="button-row">
+            <button class="rock">Rock</button>
+            <button class="paper">Paper</button>
+            <button class="scisosrs">Scissors</button>
+        </div>
+    </div>
+    <div class="footer"></div>
 </body>
 </html>
