--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
-<script src="javascript.js"></script>
+<script src="javascript.js" defer></script>
 <body>
     <div class="header"></div>
     <div class="main">
         <div class="button-row">
-            <button class="rock">Rock</button>
-            <button class="paper">Paper</button>
-            <button class="scisosrs">Scissors</button>
+            <button id="btn-rock">Rock</button>
+            <button id="btn-paper">Paper</button>
+            <button id="btn-scissors">Scissors</button>
         </div>
     </div>
     <div class="footer"></div>
