--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <button id="btn-paper">Paper</button>
             <button id="btn-scissors">Scissors</button>
         </div>
+        <div class="result"></div>
     </div>
     <div class="footer"></div>
 </body>
