--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <div class="header"></div>
     <div class="main">
+        <h1 class="score-title">Score</h1>
+        <div class="score"></div>
         <div class="button-row">
             <button id="btn-rock">Rock</button>
             <button id="btn-paper">Paper</button>
@@ -17,6 +19,6 @@
         </div>
         <div class="result"></div>
     </div>
-    <div class="footer"></div>
+    <div class="footer">© CMF</div>
 </body>
 </html>
