Enables the game to be played with score keeping.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="header"></div>
     <div class="main">
         <h1 class="score-title">Score</h1>
+        <div class="round"></div>
         <div class="score"></div>
         <div class="button-row">
             <button id="btn-rock">Rock</button>
